--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
             <div class="hero-overlay"></div>
         </div>
         <div class="hero-content">
-            <h1>CREATIVE STUDIO</h1>
+            <h1>PRODUCCIONES VERITÉ</h1>
             <p class="subtitle">Producción Audiovisual & Contenido Digital</p>
             <div class="hero-cta">
                 <a href="#contact" class="btn btn-primary">Solicitar Cotización</a>
@@ -818,36 +818,31 @@
                 <a href="#" class="btn btn-secondary" onclick="openLink('agenda')">Agendar Llamada</a>
             </div>
             <div class="contact-info">
-                <p>📧 <a href="mailto:contacto@studio.com">contacto@studio.com</a></p>
-                <p>📱 <a href="tel:+1234567890">+52 123 456 7890</a></p>
-                <p>📍 Ciudad de México, México</p>
+                <p>📧 <a href="mailto:contacto@studio.com">contacto@produccionesverite.cl</a></p>
+                <p>📱 <a href="tel:+1234567890">+569 8222 85 02</a></p>
+                <p>📍 Santiago de Chile</p>
             </div>
             <div class="social-links">
-                <a href="#" class="social-link" onclick="openLink('instagram')">📷</a>
-                <a href="#" class="social-link" onclick="openLink('youtube')">▶️</a>
-                <a href="#" class="social-link" onclick="openLink('behance')">🎨</a>
-                <a href="#" class="social-link" onclick="openLink('linkedin')">💼</a>
-                <a href="#" class="social-link" onclick="openLink('vimeo')">🎥</a>
+                <a href="#" class="social-link" onclick="openLink('youtube')">▶️</a>            
+                <a href="#" class="social-link" onclick="openLink('linkedin')">💼</a>                
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Creative Studio. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Producciones Verité. Todos los derechos reservados.</p>
     </footer>
 
     <script>
         // Links configuration - Actualiza estos enlaces con los tuyos
         const links = {
-            cotizador: 'https://forms.google.com/your-form',
-            agenda: 'https://calendly.com/your-calendar',
-            whatsapp: 'https://wa.me/521234567890',
+            cotizador: 'https://form.jotform.com/252187264964669',
+            agenda: 'https://form.jotform.com/252188973809069',
+            whatsapp: 'https://wa.me/56982228502',
             instagram: 'https://instagram.com/yourstudio',
-            youtube: 'https://youtube.com/@yourchannel',
-            behance: 'https://behance.net/yourprofile',
-            linkedin: 'https://linkedin.com/company/yourcompany',
-            vimeo: 'https://vimeo.com/yourprofile'
+            youtube: 'https://www.youtube.com/@Veriteproduccionescl',
+            linkedin: 'https://www.linkedin.com/in/diegobastiasalfaro/'       
         };
 
         // Open link function
