--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studio Audiovisual - Portafolio & Links</title>
+    <title>Producciones audiovisuales - Portafolio & Links </title>
     <style>
         * {
             margin: 0;
@@ -637,7 +637,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo">STUDIO</div>
+            <div class="logo">VERITÉ</div>
             <div class="nav-links" id="navLinks">
                 <a href="#home">Inicio</a>
                 <a href="#portfolio">Portafolio</a>
@@ -775,33 +775,33 @@
         <div class="services-grid">
             <div class="service-card">
                 <div class="service-icon">🎬</div>
-                <h3>Producción de Video</h3>
+                <h3>Producciones publicitarias</h3>
                 <p>Creamos contenido audiovisual de alta calidad para marcas, desde comerciales hasta documentales.</p>
             </div>
             <div class="service-card">
-                <div class="service-icon">📸</div>
-                <h3>Fotografía Profesional</h3>
-                <p>Sesiones fotográficas para productos, eventos, retratos y campañas publicitarias.</p>
+                <div class="service-icon">🏛</div>
+                <h3>Producciones Institucionales</h3>
+                <p>Creamos contenido institucional y corporativo para mostrar fu empresa de forma real. </p>
             </div>
             <div class="service-card">
-                <div class="service-icon">🎨</div>
+                <div class="service-icon">🎞</div>
                 <h3>Post-Producción</h3>
-                <p>Edición de video, corrección de color, efectos visuales y motion graphics.</p>
+                <p>Edición de video, corrección de color, títulos y subtitulos</p>
             </div>
             <div class="service-card">
                 <div class="service-icon">🚁</div>
-                <h3>Drone & Aéreos</h3>
+                <h3>Drone e imágenes aéreas</h3>
                 <p>Tomas aéreas cinematográficas para proyectos inmobiliarios, eventos y publicidad.</p>
             </div>
             <div class="service-card">
                 <div class="service-icon">📱</div>
-                <h3>Contenido Digital</h3>
+                <h3>Acompañamiento en todo momento</h3>
                 <p>Creación de contenido optimizado para redes sociales y plataformas digitales.</p>
             </div>
             <div class="service-card">
-                <div class="service-icon">🎙️</div>
-                <h3>Podcast & Audio</h3>
-                <p>Producción completa de podcasts, diseño sonoro y postproducción de audio.</p>
+                <div class="service-icon">📽</div>
+                <h3>Contenido Profesional</h3>
+                <p>Entregamos la mejor calidad en servicio, procurando resguardar la alta calidad de audio y video</p>
             </div>
         </div>
     </section>
