--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Producciones audiovisuales - Portafolio & Links</title>
+  <title>Producciones Verité — Audiovisual Institucional</title>
+  <meta name="description" content="Productora audiovisual: videos institucionales, corporativos y de marca. Cotizador online, portafolio y contacto. Santiago de Chile.">
   <style>
     * { margin:0; padding:0; box-sizing:border-box; }
-    :root {
-      --primary:#ff4444; --dark:#0a0a0a; --dark-light:#1a1a1a;
-      --text:#fff; --text-muted:#888; --accent:#ffcc00;
-    }
+    :root { --primary:#ff4444; --dark:#0a0a0a; --dark-light:#1a1a1a; --text:#fff; --text-muted:#9aa0a6; --accent:#ffcc00; }
     body { font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif;
            background:var(--dark); color:var(--text); overflow-x:hidden; line-height:1.6; }
-    nav { position:fixed; top:0; width:100%; padding:20px 16px; z-index:1000;
+
+    nav { position:fixed; top:0; width:100%; padding:18px 20px; z-index:1000;
           background:linear-gradient(180deg, rgba(10,10,10,.9) 0%, transparent 100%);
           transition:all .3s ease; }
-    nav.scrolled { background:rgba(10,10,10,.95); backdrop-filter:blur(10px); padding:12px 16px; }
-    .nav-container { max-width:1400px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; }
-    .logo { font-weight:800; letter-spacing:.5px; font-size:22px;
+    nav.scrolled { background:rgba(10,10,10,.95); backdrop-filter:blur(10px); padding:12px 20px; }
+    .nav-container { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; }
+    .logo { font-weight:900; letter-spacing:.5px; font-size:22px;
             background:linear-gradient(135deg, var(--primary), var(--accent));
             -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
     .nav-links { display:flex; gap:18px; }
@@ -25,30 +24,27 @@
     .nav-links a::after { content:''; position:absolute; left:0; bottom:-4px; height:2px; width:0; background:var(--primary); transition:width .25s; }
     .nav-links a:hover::after { width:100%; }
 
-    /* HERO */
     .hero { height: 100vh; min-height: 560px; position:relative; display:grid; place-items:center; overflow:hidden; background:#000; }
     .hero-bg { position:absolute; inset:0; z-index:0; overflow:hidden; }
     .hero-video { position:absolute; top:50%; left:50%; min-width:100%; min-height:100%;
                   transform:translate(-50%,-50%); object-fit:cover; }
-    .hero-overlay { position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)); }
+    .hero-overlay { position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.65)); }
     .hero-content { position:relative; z-index:1; text-align:center; padding:0 16px; }
-    .hero h1 { font-size: clamp(2.4rem, 8vw, 5.6rem); font-weight:900; letter-spacing:-1px;
+    .hero h1 { font-size: clamp(2.6rem, 8vw, 5.8rem); font-weight:900; letter-spacing:-1px;
                background:linear-gradient(135deg, var(--text) 0%, var(--text-muted) 100%);
                -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin-bottom:12px; }
-    .subtitle { font-size: clamp(1rem, 3.5vw, 1.4rem); color:var(--text-muted); margin-bottom:24px; }
+    .subtitle { font-size: clamp(1rem, 3.5vw, 1.4rem); color:var(--text-muted); margin-bottom:26px; }
     .hero-cta { display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
     .btn { padding:12px 22px; border-radius:999px; border:2px solid transparent; text-decoration:none; color:#fff; font-size:15px; }
     .btn-primary { background:linear-gradient(135deg, var(--primary), #ff6666); }
     .btn-secondary { background:transparent; border-color:#666; color:#eee; }
     .btn-secondary:hover { border-color:var(--primary); color:var(--primary); }
 
-    /* Reduced motion */
     @media (prefers-reduced-motion: reduce) {
       .hero-video { display:none; }
       .hero-bg { background: url('assets/hero-bts-poster-mobile.jpg') center/cover no-repeat; }
     }
 
-    /* Quick Links */
     .quick-links { padding:56px 16px; background:var(--dark-light); text-align:center; }
     .section-title { font-size:2rem; margin-bottom:24px; font-weight:800; }
     .links-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(220px, 1fr)); gap:18px; max-width:1100px; margin:0 auto; }
@@ -59,6 +55,22 @@
                  -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
     .link-content h3 { font-weight:700; font-size:1.1rem; margin-bottom:2px; }
     .link-content p { color:var(--text-muted); font-size:.95rem; }
+
+    .brand-strip { --gap:56px; --speed:28s; background:var(--dark); overflow:hidden; padding:28px 0; }
+    .brand-viewport { position:relative; overflow:hidden; max-width:100%; }
+    .brand-track { display:flex; gap:var(--gap); width:max-content; will-change:transform; animation:brand-scroll var(--speed) linear infinite; }
+    .brand-strip:hover .brand-track { animation-play-state: paused; }
+    .brand-item { flex:0 0 auto; display:grid; place-items:center; opacity:.9; }
+    .brand-item img { height: clamp(22px, 5vw, 48px); width:auto; filter:grayscale(100%) contrast(105%);
+                      opacity:.9; transition: filter .2s ease, transform .2s ease, opacity .2s ease; pointer-events:none; }
+    .brand-item:hover img { filter:grayscale(0%); transform:scale(1.05); opacity:1; }
+    @keyframes brand-scroll { from { transform: translateX(0); } to { transform: translateX(-50%); } }
+    @media (prefers-reduced-motion: reduce) {
+      .brand-track { animation:none; }
+      .brand-viewport { overflow-x:auto; -webkit-overflow-scrolling:touch; }
+    }
+
+    footer { text-align:center; padding:40px 20px; color:#888; }
   </style>
 </head>
 <body>
@@ -75,17 +87,13 @@
     </div>
   </nav>
 
-  <!-- HERO -->
   <section class="hero" id="home">
     <div class="hero-bg">
       <video id="heroVideo" class="hero-video" muted playsinline autoplay loop preload="metadata"
              poster="assets/hero-bts-poster-mobile.jpg">
-        <!-- Fuente preferida para móviles en vertical -->
         <source src="assets/hero-bts-vertical-720p.mp4" type="video/mp4"
                 media="(max-width: 700px) and (orientation: portrait)">
-        <!-- Fuente 720p genérica para móviles -->
         <source src="assets/hero-bts-720p.mp4" type="video/mp4" media="(max-width: 700px)">
-        <!-- Fuente 1080p para desktop -->
         <source src="assets/hero-bts-1080p.mp4" type="video/mp4">
       </video>
       <div class="hero-overlay"></div>
@@ -100,93 +108,65 @@
     </div>
   </section>
 
-  <!-- QUICK LINKS -->
-  <section class="quick-links" id="links">
-    <h2 class="section-title">Enlaces Rápidos</h2>
-    <div class="links-grid">
-      <a href="#" class="link-card" onclick="openLink('cotizador')">
-        <div class="link-icon">💰</div>
-        <div class="link-content"><h3>Cotizador Online</h3><p>Calcula el presupuesto de tu proyecto</p></div>
-      </a>
-      <a href="#" class="link-card" onclick="openLink('agenda')">
-        <div class="link-icon">📅</div>
-        <div class="link-content"><h3>Agendar Reunión</h3><p>Reserva una consultoría gratuita</p></div>
-      </a>
-      <a href="#" class="link-card" onclick="openLink('whatsapp')">
-        <div class="link-icon">💬</div>
-        <div class="link-content"><h3>WhatsApp Business</h3><p>Contáctanos directamente</p></div>
-      </a>
-      <a href="#" class="link-card" onclick="openLink('instagram')">
-        <div class="link-icon">📸</div>
-        <div class="link-content"><h3>Instagram</h3><p>Síguenos para ver nuestro trabajo</p></div>
-      </a>
-      <a href="#" class="link-card" onclick="openLink('youtube')">
-        <div class="link-icon">▶️</div>
-        <div class="link-content"><h3>YouTube</h3><p>Mira nuestros videos y reels</p></div>
-      </a>
-      <a href="#" class="link-card" onclick="openLink('behance')">
-        <div class="link-icon">🎨</div>
-        <div class="link-content"><h3>Behance</h3><p>Portafolio completo de proyectos</p></div>
-      </a>
+  <section class="brand-strip" aria-label="Clientes y Partners">
+    <div class="brand-viewport">
+      <div class="brand-track" id="brandTrack">
+        <div class="brand-item"><img src="assets/logos/logo1.png" alt="Logo 1"></div>
+        <div class="brand-item"><img src="assets/logos/logo2.png" alt="Logo 2"></div>
+        <div class="brand-item"><img src="assets/logos/logo3.png" alt="Logo 3"></div>
+        <div class="brand-item"><img src="assets/logos/logo4.png" alt="Logo 4"></div>
+        <div class="brand-item"><img src="assets/logos/logo5.png" alt="Logo 5"></div>
+        <div class="brand-item"><img src="assets/logos/logo6.png" alt="Logo 6"></div>
+        <div class="brand-item"><img src="assets/logos/logo7.png" alt="Logo 7"></div>
+        <div class="brand-item"><img src="assets/logos/logo8.png" alt="Logo 8"></div>
+        <div class="brand-item"><img src="assets/logos/logo9.png" alt="Logo 9"></div>
+        <div class="brand-item"><img src="assets/logos/logo10.png" alt="Logo 10"></div>
+      </div>
     </div>
   </section>
 
-  <footer style="text-align:center; padding:40px 20px; color:#888;">
-    &copy; 2025 Producciones Verité. Todos los derechos reservados.
-  </footer>
+  <footer>&copy; 2025 Producciones Verité. Todos los derechos reservados.</footer>
 
   <script>
-    function openLink(tipo){
-      switch(tipo){
-        case 'cotizador': window.open('https://www.jotform.com/form/251858061207052','_blank'); break;
-        case 'agenda': window.open('https://www.jotform.com/form/252188973809069','_blank'); break;
-        case 'whatsapp': window.open('https://wa.me/56982228502','_blank'); break;
-        case 'instagram': window.open('https://instagram.com/dbastias.alfaro','_blank'); break;
-        case 'youtube': window.open('https://www.youtube.com/@Veriteproduccionescl','_blank'); break;
-        case 'behance': window.open('https://behance.net','_blank'); break;
-      }
-    }
-
-    // Navbar scroll effect
     window.addEventListener('scroll', function(){
       var nav = document.getElementById('navbar');
       if(!nav) return;
       if(window.scrollY > 30) nav.classList.add('scrolled');
       else nav.classList.remove('scrolled');
     });
-  </script>
 
-  <!-- Fallback JS: si el navegador ignora media en <source>, forzar 720p en pantallas pequeñas o Save-Data -->
-  <script>
-  (function(){
-    const v = document.getElementById('heroVideo');
-    if(!v) return;
-    const prefersReduced = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-    if (prefersReduced) { try{ v.pause(); }catch(e){} return; }
+    (function(){
+      const track = document.getElementById('brandTrack');
+      if (!track) return;
+      track.innerHTML = track.innerHTML + track.innerHTML;
+      if ('IntersectionObserver' in window) {
+        const io = new IntersectionObserver(entries => {
+          entries.forEach(e => { track.style.animationPlayState = e.isIntersecting ? 'running' : 'paused'; });
+        });
+        io.observe(track);
+      }
+    })();
 
-    const saveData = navigator.connection && (navigator.connection.saveData || (navigator.connection.effectiveType||'').includes('2g'));
-    const small = Math.min(window.innerWidth, window.innerHeight) <= 700;
-
-    // Si es pantalla pequeña o ahorro de datos, intenta usar la 720p
-    if ((saveData || small) && v.querySelector('source[src*="hero-bts-720p.mp4"]')) {
-      // Si la fuente actual no es ya la 720p, recarga con 720p
-      const sources = Array.from(v.querySelectorAll('source'));
-      sources.forEach(s => {
-        if (s.src.includes('hero-bts-1080p.mp4')) {
-          s.src = s.src.replace('hero-bts-1080p.mp4', 'hero-bts-720p.mp4');
-        }
-      });
-      v.load();
-    }
-
-    const start = () => v.play().catch(()=>{});
-    if ('IntersectionObserver' in window) {
-      const io = new IntersectionObserver(es => {
-        es.forEach(e => { if (e.isIntersecting) { start(); io.disconnect(); } });
-      }, { threshold: 0.25 });
-      io.observe(v);
-    } else { start(); }
-  })();
+    (function(){
+      const v = document.getElementById('heroVideo');
+      if(!v) return;
+      const prefersReduced = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+      if (prefersReduced) { try{ v.pause(); }catch(e){} return; }
+      const saveData = navigator.connection && (navigator.connection.saveData || (navigator.connection.effectiveType||'').includes('2g'));
+      const small = Math.min(window.innerWidth, window.innerHeight) <= 700;
+      if ((saveData || small) && v.querySelector('source[src*="hero-bts-720p.mp4"]')) {
+        const sources = Array.from(v.querySelectorAll('source'));
+        sources.forEach(s => { if (s.src.includes('hero-bts-1080p.mp4')) s.src = s.src.replace('1080p', '720p'); });
+        v.load();
+      }
+      const start = () => v.play().catch(()=>{});
+      if ('IntersectionObserver' in window) {
+        const io = new IntersectionObserver(es => {
+          es.forEach(e => { if (e.isIntersecting) { start(); io.disconnect(); } });
+        }, { threshold: 0.25 });
+        io.observe(v);
+      } else { start(); }
+    })();
   </script>
 </body>
 </html>
