--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Producciones Verité — Audiovisual Institucional</title>
-  <meta name="description" content="Productora audiovisual: videos institucionales, corporativos y de marca. Cotizador online, portafolio y contacto. Santiago de Chile.">
+  <title>Producciones Verité — Servicios Audiovisuales Institucionales - Publicitarios</title>
+  <meta name="description" content="Productora audiovisual: videos institucionales, corporativos y de marca. Cotizar online, portafolio y contacto. Santiago de Chile.">
   <style>
     * { margin:0; padding:0; box-sizing:border-box; }
     :root { --primary:#ff4444; --dark:#0a0a0a; --dark-light:#1a1a1a; --text:#fff; --text-muted:#9aa0a6; --accent:#ffcc00; }
