--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,11 +5,24 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Producciones Verité — Servicios Audiovisuales Institucionales - Publicitarios</title>
 <meta content="Productora audiovisual: videos institucionales, corporativos y de marca. Cotizar online, portafolio y contacto. Santiago de Chile." name="description"/>
+
+<!-- Montserrat para todo el sitio -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+
 <style>
     * { margin:0; padding:0; box-sizing:border-box; }
     :root { --primary:#ff4444; --dark:#0a0a0a; --dark-light:#1a1a1a; --text:#fff; --text-muted:#9aa0a6; --accent:#ffcc00; }
-    body { font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif;
-           background:var(--dark); color:var(--text); overflow-x:hidden; line-height:1.6; }
+
+    /* Fuente global Montserrat */
+    body {
+      font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background:var(--dark); color:var(--text); overflow-x:hidden; line-height:1.6;
+      text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+    }
+    /* Pesos sugeridos para títulos */
+    h1,h2,h3 { font-weight:800; letter-spacing:-0.02em; }
 
     nav { position:fixed; top:0; width:100%; padding:18px 20px; z-index:1000;
           background:linear-gradient(180deg, rgba(10,10,10,.9) 0%, transparent 100%);
@@ -21,7 +33,7 @@
             background:linear-gradient(135deg, var(--primary), var(--accent));
             -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
     .nav-links { display:flex; gap:18px; }
-    .nav-links a { color:var(--text); text-decoration:none; position:relative; font-size:14px; }
+    .nav-links a { color:var(--text); text-decoration:none; position:relative; font-size:14px; font-weight:600; }
     .nav-links a::after { content:''; position:absolute; left:0; bottom:-4px; height:2px; width:0; background:var(--primary); transition:width .25s; }
     .nav-links a:hover::after { width:100%; }
 
@@ -31,12 +43,15 @@
                   transform:translate(-50%,-50%); object-fit:cover; }
     .hero-overlay { position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.65)); }
     .hero-content { position:relative; z-index:1; text-align:center; padding:0 16px; }
-    .hero h1 { font-size: clamp(2.6rem, 8vw, 5.8rem); font-weight:900; letter-spacing:-1px;
-               background:linear-gradient(135deg, var(--text) 0%, var(--text-muted) 100%);
-               -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin-bottom:12px; }
-    .subtitle { font-size: clamp(1rem, 3.5vw, 1.4rem); color:var(--text-muted); margin-bottom:26px; }
+    .hero h1 {
+      font-family:"Montserrat", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif; /* aseguramos Montserrat */
+      font-size: clamp(2.6rem, 8vw, 5.8rem); font-weight:900; letter-spacing:-0.03em;
+      background:linear-gradient(135deg, var(--text) 0%, var(--text-muted) 100%);
+      -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin-bottom:12px;
+    }
+    .subtitle { font-size: clamp(1rem, 3.5vw, 1.4rem); color:var(--text-muted); margin-bottom:26px; font-weight:600; }
     .hero-cta { display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
-    .btn { padding:12px 22px; border-radius:999px; border:2px solid transparent; text-decoration:none; color:#fff; font-size:15px; }
+    .btn { padding:12px 22px; border-radius:999px; border:2px solid transparent; text-decoration:none; color:#fff; font-size:15px; font-weight:700; }
     .btn-primary { background:linear-gradient(135deg, var(--primary), #ff6666); }
     .btn-secondary { background:transparent; border-color:#666; color:#eee; }
     .btn-secondary:hover { border-color:var(--primary); color:var(--primary); }
@@ -54,7 +69,7 @@
     .link-card:hover { transform:translateY(-2px); box-shadow:0 8px 38px rgba(255,68,68,.18); }
     .link-icon { font-size:2rem; background:linear-gradient(135deg, var(--primary), var(--accent));
                  -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
-    .link-content h3 { font-weight:700; font-size:1.1rem; margin-bottom:2px; }
+    .link-content h3 { font-weight:800; font-size:1.1rem; margin-bottom:2px; }
     .link-content p { color:var(--text-muted); font-size:.95rem; }
 
     .brand-strip { --gap:56px; --speed:28s; background:var(--dark); overflow:hidden; padding:28px 0; }
@@ -72,7 +87,7 @@
     }
 
     footer { text-align:center; padding:40px 20px; color:#888; }
-  </style>
+</style>
 </head>
 <body>
 <nav id="navbar">
@@ -118,7 +133,7 @@
     </div>
   </div>
   <style>
-    /* ====== Estilos locales de la sección (no afecta al resto) ====== */
+    /* Encapsulado: Montserrat heredado para los títulos de card */
     #pv-cards{padding:clamp(24px,5vw,72px) 0; border-top:1px solid #141414; border-bottom:1px solid #141414}
     #pv-cards .pv-container{width:min(1200px,92vw); margin-inline:auto}
     #pv-cards .pv-cards-grid{display:grid; gap:20px; grid-template-columns:2fr 1fr; grid-auto-rows:180px}
@@ -130,7 +145,7 @@
     #pv-cards .pv-card{
       position:relative; display:flex; align-items:center; justify-content:center;
       border-radius:20px; min-height:160px; color:#fff; text-decoration:none; text-transform:uppercase;
-      font-weight:800; letter-spacing:.04em; font-size:clamp(18px,2.2vw,26px);
+      font-weight:900; letter-spacing:.04em; font-size:clamp(18px,2.2vw,26px);
       background:
         radial-gradient(120% 100% at 10% 0%, rgba(255,255,255,.18), rgba(255,255,255,0) 60%),
         linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,0) 30%),
