--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,81 +13,93 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 
 <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    :root { --primary:#ff4444; --dark:#0a0a0a; --dark-light:#1a1a1a; --text:#fff; --text-muted:#9aa0a6; --accent:#ffcc00; }
+  * { margin:0; padding:0; box-sizing:border-box; }
+  :root { --primary:#ff4444; --dark:#0a0a0a; --dark-light:#1a1a1a; --text:#fff; --text-muted:#9aa0a6; --accent:#ffcc00; }
 
-    /* Fuente global Montserrat */
-    body {
-      font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background:var(--dark); color:var(--text); overflow-x:hidden; line-height:1.6;
-      text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-    }
-    /* Pesos sugeridos para títulos */
-    h1,h2,h3 { font-weight:800; letter-spacing:-0.02em; }
+  /* Fuente global Montserrat */
+  body{
+    font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    background:var(--dark); color:var(--text); overflow-x:hidden; line-height:1.6;
+    text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+  }
+  h1,h2,h3{ font-weight:800; letter-spacing:-0.02em; }
 
-    nav { position:fixed; top:0; width:100%; padding:18px 20px; z-index:1000;
-          background:linear-gradient(180deg, rgba(10,10,10,.9) 0%, transparent 100%);
-          transition:all .3s ease; }
-    nav.scrolled { background:rgba(10,10,10,.95); backdrop-filter:blur(10px); padding:12px 20px; }
-    .nav-container { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; }
-    .logo { font-weight:900; letter-spacing:.5px; font-size:22px;
-            background:linear-gradient(135deg, var(--primary), var(--accent));
-            -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
-    .nav-links { display:flex; gap:18px; }
-    .nav-links a { color:var(--text); text-decoration:none; position:relative; font-size:14px; font-weight:600; }
-    .nav-links a::after { content:''; position:absolute; left:0; bottom:-4px; height:2px; width:0; background:var(--primary); transition:width .25s; }
-    .nav-links a:hover::after { width:100%; }
+  nav { position:fixed; top:0; width:100%; padding:18px 20px; z-index:1000;
+        background:linear-gradient(180deg, rgba(10,10,10,.9) 0%, transparent 100%);
+        transition:all .3s ease; }
+  nav.scrolled { background:rgba(10,10,10,.95); backdrop-filter:blur(10px); padding:12px 20px; }
+  .nav-container { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; }
+  .logo { font-weight:900; letter-spacing:.5px; font-size:22px;
+          background:linear-gradient(135deg, var(--primary), var(--accent));
+          -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
+  .nav-links { display:flex; gap:18px; }
+  .nav-links a { color:var(--text); text-decoration:none; position:relative; font-size:14px; font-weight:600; }
+  .nav-links a::after { content:''; position:absolute; left:0; bottom:-4px; height:2px; width:0; background:var(--primary); transition:width .25s; }
+  .nav-links a:hover::after { width:100%; }
 
-    .hero { height: 100vh; min-height: 560px; position:relative; display:grid; place-items:center; overflow:hidden; background:#000; }
-    .hero-bg { position:absolute; inset:0; z-index:0; overflow:hidden; }
-    .hero-video { position:absolute; top:50%; left:50%; min-width:100%; min-height:100%;
-                  transform:translate(-50%,-50%); object-fit:cover; }
-    .hero-overlay { position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.65)); }
-    .hero-content { position:relative; z-index:1; text-align:center; padding:0 16px; }
-    .hero h1 {
-      font-family:"Montserrat", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif; /* aseguramos Montserrat */
-      font-size: clamp(2.6rem, 8vw, 5.8rem); font-weight:900; letter-spacing:-0.03em;
-      background:linear-gradient(135deg, var(--text) 0%, var(--text-muted) 100%);
-      -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin-bottom:12px;
-    }
-    .subtitle { font-size: clamp(1rem, 3.5vw, 1.4rem); color:var(--text-muted); margin-bottom:26px; font-weight:600; }
-    .hero-cta { display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
-    .btn { padding:12px 22px; border-radius:999px; border:2px solid transparent; text-decoration:none; color:#fff; font-size:15px; font-weight:700; }
-    .btn-primary { background:linear-gradient(135deg, var(--primary), #ff6666); }
-    .btn-secondary { background:transparent; border-color:#666; color:#eee; }
-    .btn-secondary:hover { border-color:var(--primary); color:var(--primary); }
+  .hero { height:100vh; min-height:560px; position:relative; display:grid; place-items:center; overflow:hidden; background:#000; }
+  .hero-bg { position:absolute; inset:0; z-index:0; overflow:hidden; }
+  .hero-video { position:absolute; top:50%; left:50%; min-width:100%; min-height:100%;
+                transform:translate(-50%,-50%); object-fit:cover; }
+  .hero-overlay { position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.65)); }
 
-    @media (prefers-reduced-motion: reduce) {
-      .hero-video { display:none; }
-      .hero-bg { background: url('assets/hero-bts-poster-mobile.jpg') center/cover no-repeat; }
-    }
+  /* === FIX responsive hero === */
+  .hero-content{
+    position:relative; z-index:1; text-align:center;
+    max-width:min(920px,92vw);
+    margin-inline:auto;
+    padding-left:max(16px, env(safe-area-inset-left));
+    padding-right:max(16px, env(safe-area-inset-right));
+  }
+  .hero h1{
+    font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
+    font-size:clamp(1.9rem, 9.2vw, 4.4rem);
+    line-height:1.05; letter-spacing:-0.02em;
+    max-width:min(18ch,92vw);     /* evita desbordes */
+    margin-inline:auto; margin-bottom:12px;
+    word-break:break-word; overflow-wrap:anywhere;
+    background:linear-gradient(135deg, var(--text) 0%, var(--text-muted) 100%);
+    -webkit-background-clip:text; -webkit-text-fill-color:transparent;
+  }
+  .subtitle { font-size:clamp(0.95rem, 3.8vw, 1.25rem); color:var(--text-muted); margin-bottom:26px; font-weight:600; }
+  .hero-cta { display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
+  .btn { padding:12px 22px; border-radius:999px; border:2px solid transparent; text-decoration:none; color:#fff; font-size:15px; font-weight:700; }
+  .btn-primary { background:linear-gradient(135deg, var(--primary), #ff6666); }
+  .btn-secondary { background:transparent; border-color:#666; color:#eee; }
+  .btn-secondary:hover { border-color:var(--primary); color:var(--primary); }
+  @media (max-width:380px){ .btn{ padding:11px 16px; font-size:14px; } }
 
-    .quick-links { padding:56px 16px; background:var(--dark-light); text-align:center; }
-    .section-title { font-size:2rem; margin-bottom:24px; font-weight:800; }
-    .links-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(220px, 1fr)); gap:18px; max-width:1100px; margin:0 auto; }
-    .link-card { background:#181818; border-radius:18px; padding:22px 18px; display:flex; align-items:center; gap:14px;
-                 color:#fff; text-decoration:none; box-shadow:0 4px 24px rgba(0,0,0,.15); }
-    .link-card:hover { transform:translateY(-2px); box-shadow:0 8px 38px rgba(255,68,68,.18); }
-    .link-icon { font-size:2rem; background:linear-gradient(135deg, var(--primary), var(--accent));
-                 -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
-    .link-content h3 { font-weight:800; font-size:1.1rem; margin-bottom:2px; }
-    .link-content p { color:var(--text-muted); font-size:.95rem; }
+  @media (prefers-reduced-motion: reduce) {
+    .hero-video { display:none; }
+    .hero-bg { background:url('assets/hero-bts-poster-mobile.jpg') center/cover no-repeat; }
+  }
 
-    .brand-strip { --gap:56px; --speed:28s; background:var(--dark); overflow:hidden; padding:28px 0; }
-    .brand-viewport { position:relative; overflow:hidden; max-width:100%; }
-    .brand-track { display:flex; gap:var(--gap); width:max-content; will-change:transform; animation:brand-scroll var(--speed) linear infinite; }
-    .brand-strip:hover .brand-track { animation-play-state: paused; }
-    .brand-item { flex:0 0 auto; display:grid; place-items:center; opacity:.9; }
-    .brand-item img { height: clamp(22px, 5vw, 48px); width:auto; filter:grayscale(100%) contrast(105%);
-                      opacity:.9; transition: filter .2s ease, transform .2s ease, opacity .2s ease; pointer-events:none; }
-    .brand-item:hover img { filter:grayscale(0%); transform:scale(1.05); opacity:1; }
-    @keyframes brand-scroll { from { transform: translateX(0); } to { transform: translateX(-50%); } }
-    @media (prefers-reduced-motion: reduce) {
-      .brand-track { animation:none; }
-      .brand-viewport { overflow-x:auto; -webkit-overflow-scrolling:touch; }
-    }
+  .quick-links { padding:56px 16px; background:var(--dark-light); text-align:center; }
+  .section-title { font-size:2rem; margin-bottom:24px; font-weight:800; }
+  .links-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(220px, 1fr)); gap:18px; max-width:1100px; margin:0 auto; }
+  .link-card { background:#181818; border-radius:18px; padding:22px 18px; display:flex; align-items:center; gap:14px;
+               color:#fff; text-decoration:none; box-shadow:0 4px 24px rgba(0,0,0,.15); }
+  .link-card:hover { transform:translateY(-2px); box-shadow:0 8px 38px rgba(255,68,68,.18); }
+  .link-icon { font-size:2rem; background:linear-gradient(135deg, var(--primary), var(--accent));
+               -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
+  .link-content h3 { font-weight:800; font-size:1.1rem; margin-bottom:2px; }
+  .link-content p { color:var(--text-muted); font-size:.95rem; }
 
-    footer { text-align:center; padding:40px 20px; color:#888; }
+  .brand-strip { --gap:56px; --speed:28s; background:var(--dark); overflow:hidden; padding:28px 0; }
+  .brand-viewport { position:relative; overflow:hidden; max-width:100%; }
+  .brand-track { display:flex; gap:var(--gap); width:max-content; will-change:transform; animation:brand-scroll var(--speed) linear infinite; }
+  .brand-strip:hover .brand-track { animation-play-state: paused; }
+  .brand-item { flex:0 0 auto; display:grid; place-items:center; opacity:.9; }
+  .brand-item img { height:clamp(22px, 5vw, 48px); width:auto; filter:grayscale(100%) contrast(105%);
+                    opacity:.9; transition:filter .2s ease, transform .2s ease, opacity .2s ease; pointer-events:none; }
+  .brand-item:hover img { filter:grayscale(0%); transform:scale(1.05); opacity:1; }
+  @keyframes brand-scroll { from{ transform:translateX(0); } to{ transform:translateX(-50%); } }
+  @media (prefers-reduced-motion: reduce) {
+    .brand-track { animation:none; }
+    .brand-viewport { overflow-x:auto; -webkit-overflow-scrolling:touch; }
+  }
+
+  footer { text-align:center; padding:40px 20px; color:#888; }
 </style>
 </head>
 <body>
@@ -133,7 +146,7 @@
     </div>
   </div>
   <style>
-    /* Encapsulado: Montserrat heredado para los títulos de card */
+    /* ====== Estilos locales de la sección (no afecta al resto) ====== */
     #pv-cards{padding:clamp(24px,5vw,72px) 0; border-top:1px solid #141414; border-bottom:1px solid #141414}
     #pv-cards .pv-container{width:min(1200px,92vw); margin-inline:auto}
     #pv-cards .pv-cards-grid{display:grid; gap:20px; grid-template-columns:2fr 1fr; grid-auto-rows:180px}
@@ -152,19 +165,19 @@
         repeating-linear-gradient(90deg, #0d0d0d 0px, #0d0d0d 2px, #121212 2px, #121212 4px),
         linear-gradient(180deg, #0a0a0a, #171717);
       border:1px solid #2b2b2b;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,.06), 0 10px 30px rgba(0,0,0,.5);
-      overflow:hidden; transition: transform .25s ease, box-shadow .25s ease, border-color .25s ease;
+      box-shadow:inset 0 1px 0 rgba(255,255,255,.06), 0 10px 30px rgba(0,0,0,.5);
+      overflow:hidden; transition:transform .25s ease, box-shadow .25s ease, border-color .25s ease;
     }
     #pv-cards .pv-card::before{
       content:""; position:absolute; inset:0;
       background:
         radial-gradient(100% 140% at -20% -20%, rgba(255,255,255,.22) 0, rgba(255,255,255,0) 60%),
         linear-gradient(120deg, rgba(255,255,255,.08), rgba(255,255,255,0) 30%);
-      mix-blend-mode: overlay; pointer-events:none;
+      mix-blend-mode:overlay; pointer-events:none;
     }
     #pv-cards .pv-card:hover{
-      transform: translateY(-4px);
-      box-shadow: inset 0 1px 0 rgba(255,255,255,.08), 0 18px 40px rgba(0,0,0,.6);
+      transform:translateY(-4px);
+      box-shadow:inset 0 1px 0 rgba(255,255,255,.08), 0 18px 40px rgba(0,0,0,.6);
       border-color:#3a3a3a;
     }
     #pv-cards .pv-card span{position:relative; z-index:1}
@@ -192,45 +205,45 @@
 <footer>© 2025 Producciones Verité. Todos los derechos reservados.</footer>
 
 <script>
-    window.addEventListener('scroll', function(){
-      var nav = document.getElementById('navbar');
-      if(!nav) return;
-      if(window.scrollY > 30) nav.classList.add('scrolled');
-      else nav.classList.remove('scrolled');
-    });
+  window.addEventListener('scroll', function(){
+    var nav = document.getElementById('navbar');
+    if(!nav) return;
+    if(window.scrollY > 30) nav.classList.add('scrolled');
+    else nav.classList.remove('scrolled');
+  });
 
-    (function(){
-      const track = document.getElementById('brandTrack');
-      if (!track) return;
-      track.innerHTML = track.innerHTML + track.innerHTML;
-      if ('IntersectionObserver' in window) {
-        const io = new IntersectionObserver(entries => {
-          entries.forEach(e => { track.style.animationPlayState = e.isIntersecting ? 'running' : 'paused'; });
-        });
-        io.observe(track);
-      }
-    })();
+  (function(){
+    const track = document.getElementById('brandTrack');
+    if (!track) return;
+    track.innerHTML = track.innerHTML + track.innerHTML;
+    if ('IntersectionObserver' in window) {
+      const io = new IntersectionObserver(entries => {
+        entries.forEach(e => { track.style.animationPlayState = e.isIntersecting ? 'running' : 'paused'; });
+      });
+      io.observe(track);
+    }
+  })();
 
-    (function(){
-      const v = document.getElementById('heroVideo');
-      if(!v) return;
-      const prefersReduced = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-      if (prefersReduced) { try{ v.pause(); }catch(e){} return; }
-      const saveData = navigator.connection && (navigator.connection.saveData || (navigator.connection.effectiveType||'').includes('2g'));
-      const small = Math.min(window.innerWidth, window.innerHeight) <= 700;
-      if ((saveData || small) && v.querySelector('source[src*="hero-bts-720p.mp4"]')) {
-        const sources = Array.from(v.querySelectorAll('source'));
-        sources.forEach(s => { if (s.src.includes('hero-bts-1080p.mp4')) s.src = s.src.replace('1080p', '720p'); });
-        v.load();
-      }
-      const start = () => v.play().catch(()=>{});
-      if ('IntersectionObserver' in window) {
-        const io = new IntersectionObserver(es => {
-          es.forEach(e => { if (e.isIntersecting) { start(); io.disconnect(); } });
-        }, { threshold: 0.25 });
-        io.observe(v);
-      } else { start(); }
-    })();
+  (function(){
+    const v = document.getElementById('heroVideo');
+    if(!v) return;
+    const prefersReduced = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    if (prefersReduced) { try{ v.pause(); }catch(e){} return; }
+    const saveData = navigator.connection && (navigator.connection.saveData || (navigator.connection.effectiveType||'').includes('2g'));
+    const small = Math.min(window.innerWidth, window.innerHeight) <= 700;
+    if ((saveData || small) && v.querySelector('source[src*="hero-bts-720p.mp4"]')) {
+      const sources = Array.from(v.querySelectorAll('source'));
+      sources.forEach(s => { if (s.src.includes('hero-bts-1080p.mp4')) s.src = s.src.replace('1080p', '720p'); });
+      v.load();
+    }
+    const start = () => v.play().catch(()=>{});
+    if ('IntersectionObserver' in window) {
+      const io = new IntersectionObserver(es => {
+        es.forEach(e => { if (e.isIntersecting) { start(); io.disconnect(); } });
+      }, { threshold: 0.25 });
+      io.observe(v);
+    } else { start(); }
+  })();
 </script>
 </body>
 </html>
